Fix image bleed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,6 +39,12 @@ p.user {
   overflow: hidden;
 }
 
+#content img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 #content.show li {
   line-height: 1.92;
 }
